@@ -2,7 +2,8 @@
 
     * src/dialogs/geda_file_chooser.c: Include geda_gtk_compat.h.
 
-    * src/dialogs/geda_image_chooser.c: Include geda_gtk_compat.h.
+    * src/dialogs/geda_image_chooser.c: Include geda_gtk_compat.h, utilize
+      geda_get_widget_allocation in chooser_adjust_size.
 
 2020-01-13 Wiley E. Hill <wileyhill@gmail.com>
 
